# Hydra.Python

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  project_report.rst
cmake/: FindHydra.cmake  FindThrust.cmake  Findpybind11.cmake
docs/: Events.rst  Makefile  PhaseSpace.rst  PhaseSpaceExample.rst  Random.rst  Vector.rst  basics.rst  conf.py  index.rst  intro.rst  project_report.rst
docs/_build/doctrees/: Events.doctree  PhaseSpace.doctree  PhaseSpaceExample.doctree  Random.doctree  Vector.doctree  basics.doctree  environment.pickle  index.doctree  intro.doctree  project_report.doctree
docs/_build/html/: .buildinfo  Events.html  PhaseSpace.html  PhaseSpaceExample.html  Random.html  Vector.html  basics.html  genindex.html  index.html  intro.html  objects.inv  project_report.html  search.html  searchindex.js
docs/_build/html/_sources/: PhaseSpace.txt  PhaseSpaceExample.txt  Random.txt  index.rst.txt  index.txt  intro.txt
docs/_build/html/_static/: Events.rst  Makefile  basics.rst  conf.py  make.bat
examples/PhaseSpace/: constants.py  phsp_averaging_functor.py  phsp_basic.py  phsp_chain.py  phsp_evaluating_functor.py
include/: PyEvents.h  PyIterator.h  PyPhaseSpace.h  PyRandom.h  PyVector3R.h  PyVector4R.h  add_object.h  bind_container.h  casters.h  make_opaque.h  typedefs.h
include/hydra.python/: HydraPython.h  HydraPython.h.in
src/: Events.cpp  PhaseSpace.cpp  PyBindings.cpp  PyContainers.cpp  PyEvents.rst  PyPhaseSpace.rst  PyRandom.cpp  PyVector.cpp  ThrustIterator.cpp  Vector.cpp  Vector4R.cpp  Vector4R_v2.cpp
tests/: test_containers.py  test_events.py  test_phasespace.py  test_vector.py
